--- a/src/rate.css
+++ b/src/rate.css
@@ -7,20 +7,9 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    height: 100px;
+    height: 80px;
     border-bottom: 1px solid #d7d7d7;
-    width: 900px;
-}
-.rate {
-    display: flex;
-    align-items: center;
-    padding-right: 24px;
-    min-width: 300px;
-}
-
-.rate h1 {
-    font-size: 16px;
-    width: 150px;
+    width: 1000px;
 }
 
 .rate-data {
@@ -29,6 +18,12 @@
     justify-content: space-between;
     width: 100%;  
 }
+
+.rate-data h1 {
+    font-size: 16px;
+    width: 150px;
+}
+
 
 .rate-unit{
     width: 110px;
